[gd_scene load_steps=4 format=3 uid="uid://sdqd21tv751h"]

[ext_resource type="Script" path="res://Script/Main.gd" id="1_aj2xg"]
[ext_resource type="PackedScene" uid="uid://b6typvjb3thmd" path="res://Scene/Cat.tscn" id="2_rjy8c"]
[ext_resource type="AudioStream" uid="uid://cumoqi775nbj2" path="res://Music/Game.mp3" id="3_iux5i"]

[node name="Main" type="Node2D"]
script = ExtResource("1_aj2xg")

[node name="Cat" parent="." instance=ExtResource("2_rjy8c")]
top_level = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_iux5i")
autoplay = true
parameters/looping = true

[connection signal="claw_room" from="." to="Cat" method="claw_room"]
[connection signal="door2_key_room" from="." to="Cat" method="door2_key_room"]
[connection signal="door_key_room" from="." to="Cat" method="door_key_room"]
[connection signal="door_room" from="." to="Cat" method="door_room"]
[connection signal="key_chest_room" from="." to="Cat" method="key_chest_room"]
[connection signal="number_chest_room" from="." to="Cat" method="number_chest_room"]
[connection signal="tree_room" from="." to="Cat" method="tree_room"]
[connection signal="yarn_room" from="." to="Cat" method="yarn_room"]
